# MCE

./: CMakeLists.txt  LICENSE  flake.nix  shell.nix
dbt/: CMakeLists.txt
dbt/include/: contract.h  mips_jit.h  types.h
dbt/src/: core.cpp  main.cpp
dbt/src/ops/: add.cpp  addi.cpp  addiu.cpp  bne.cpp  j.cpp  jr.cpp  lui.cpp  lw.cpp  or.cpp  ori.cpp  sll.cpp  slt.cpp  srl.cpp  sub.cpp  sw.cpp  xor.cpp
dbt/tests/: test_runner.cpp
dbt/tests/c_sources/: sort.c  tea.c
include/: MIPS32.h  MIPS32_branch.h  MIPS32_control.h  MIPS32_logic.h  MIPS32_math.h  MIPS32_mem.h  MIPS32_move.h  MIPS32_shift.h  MIPS32_trap.h  debug.h  types.h
src/: CMakeLists.txt  MIPS32_add.c  MIPS32_addi.c  MIPS32_free.c  MIPS32_init.c  MIPS32_run.c  MIPS32_unknown_opcode.c  main.c
